[gd_scene load_steps=6 format=2]

[ext_resource path="res://resource/sprites/ignis/ignis_regular_level/torch.png" type="Texture" id=1]
[ext_resource path="res://resource/sprites/ignis/ignis_regular_level/torchOff.png" type="Texture" id=2]
[ext_resource path="res://src/objects/IgnisRegularInner/IgnisRegularInner.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/objects/IgnisRegularLevel/IgnisRegularLevel.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 24 )

[node name="IgnisRegularLevel" type="Area2D"]
light_mask = 3
collision_layer = 2
collision_mask = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="SpriteTorchOn" type="Sprite" parent="."]
position = Vector2( 1, -16 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="SpriteTorchOff" type="Sprite" parent="."]
position = Vector2( 1, -16 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -17 )
shape = SubResource( 1 )

[node name="Light2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -2.38419e-07, -32 )
[connection signal="body_entered" from="." to="." method="_on_IgnisRegularLevel_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_IgnisRegularLevel_body_exited"]
